feat: Implementação do contrato da API de processamento de múltiplas simulações
