# src/main/java/challenge/controller/LoanController.java
@@ -1,6 +1,7 @@
 package challenge.controller;
 
 import challenge.api.LoanApi;
+import challenge.domain.workflow.definition.entry.MultipleLoanSimulationWorkflow;
 import challenge.domain.workflow.definition.entry.SimpleLoanSimulationWorkflow;
 import challenge.model.LoanSimulationData;
 import challenge.model.LoanSimulationResponse;
@@ -9,14 +10,24 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.List;
+
 @RestController
 @RequiredArgsConstructor
 public class LoanController implements LoanApi {
 
     private final @NonNull SimpleLoanSimulationWorkflow simpleLoanSimulationWorkflow;
+    private final @NonNull MultipleLoanSimulationWorkflow multipleLoanSimulationWorkflow;
 
     @Override
     public ResponseEntity<LoanSimulationResponse> processLoanSimulation(LoanSimulationData loanSimulationData) {
         return ResponseEntity.ok(simpleLoanSimulationWorkflow.execute(loanSimulationData));
+    }
+
+    @Override
+    public ResponseEntity<List<LoanSimulationResponse>> processLoanSimulationList(
+            List<LoanSimulationData> loanSimulationData
+    ) {
+        return ResponseEntity.ok(multipleLoanSimulationWorkflow.execute(loanSimulationData));
     }
 }
